@@ -17,7 +17,6 @@
  */
 package org.jackhuang.hmcl.ui.versions;
 
-import com.github.steveice10.opennbt.tag.builtin.*;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXTextField;
 import javafx.beans.property.SimpleBooleanProperty;
@@ -25,15 +24,14 @@ import javafx.beans.property.SimpleStringProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.geometry.Pos;
-import javafx.scene.Cursor;
 import javafx.scene.control.Label;
 import javafx.scene.control.ScrollPane;
 import javafx.scene.effect.BoxBlur;
 import javafx.scene.image.Image;
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.FileChooser;
+import org.glavo.nbt.tag.*;
 import org.jackhuang.hmcl.game.World;
 import org.jackhuang.hmcl.ui.Controllers;
 import org.jackhuang.hmcl.ui.FXUtils;
@@ -76,7 +74,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
     }
 
     private void updateControls() {
-        CompoundTag dataTag = levelData.get("Data");
+        CompoundTag dataTag = (CompoundTag) levelData.get("Data");
         CompoundTag playerTag = playerData;
 
         ScrollPane scrollPane = new ScrollPane();
@@ -100,7 +98,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 setRightTextField(worldNamePane, worldNameField, 200);
 
                 if (dataTag.get("LevelName") instanceof StringTag worldNameTag) {
-                    var worldName = new SimpleStringProperty(worldNameTag.getValue());
+                    var worldName = new SimpleStringProperty(worldNameTag.get());
                     FXUtils.bindString(worldNameField, worldName);
                     worldNameField.getProperties().put(WorldInfoPage.class.getName() + ".worldNameProperty", worldName);
                     worldName.addListener((observable, oldValue, newValue) -> {
@@ -162,11 +160,10 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 seedPane.setTitle(i18n("world.info.random_seed"));
 
                 SimpleBooleanProperty visibility = new SimpleBooleanProperty();
-                StackPane visibilityButton = new StackPane();
+                JFXButton visibilityButton = FXUtils.newToggleButton4(SVG.VISIBILITY_OFF);
                 {
-                    visibilityButton.setCursor(Cursor.HAND);
-                    visibilityButton.setAlignment(Pos.CENTER_RIGHT);
-                    FXUtils.onClicked(visibilityButton, () -> visibility.set(!visibility.get()));
+                    visibilityButton.setAlignment(Pos.CENTER);
+                    visibilityButton.setOnAction((event) -> visibility.set(!visibility.get()));
                 }
 
                 Label seedLabel = new Label();
@@ -180,7 +177,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                     blur.setIterations(3);
                     FXUtils.onChangeAndOperate(visibility, isVisibility -> {
                         SVG icon = isVisibility ? SVG.VISIBILITY : SVG.VISIBILITY_OFF;
-                        visibilityButton.getChildren().setAll(icon.createIcon(12));
+                        visibilityButton.setGraphic(icon.createIcon(16));
                         seedLabel.setEffect(isVisibility ? null : blur);
                     });
                 }
@@ -324,7 +321,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
             {
                 locationPane.setTitle(i18n("world.info.player.location"));
                 Dimension dimension = Dimension.of(playerTag.get("Dimension"));
-                if (dimension != null && playerTag.get("Pos") instanceof ListTag posTag) {
+                if (dimension != null && playerTag.get("Pos") instanceof ListTag<?> posTag) {
                     locationPane.setText(dimension.formatPosition(posTag));
                 }
             }
@@ -347,7 +344,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
                 if (playerTag.get("respawn") instanceof CompoundTag respawnTag
                         && respawnTag.get("dimension") instanceof StringTag dimensionTag
                         && respawnTag.get("pos") instanceof IntArrayTag intArrayTag
-                        && intArrayTag.length() >= 3) { // Valid after 25w07a
+                        && intArrayTag.size() >= 3) { // Valid after 25w07a
                     spawnPane.setText(Dimension.of(dimensionTag).formatPosition(intArrayTag));
                 } else if (playerTag.get("SpawnX") instanceof IntTag intX
                         && playerTag.get("SpawnY") instanceof IntTag intY
@@ -541,7 +538,7 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
 
         static Dimension of(Tag tag) {
             if (tag instanceof IntTag intTag) {
-                return switch (intTag.getValue()) {
+                return switch (intTag.get()) {
                     case 0 -> OVERWORLD;
                     case -1 -> THE_NETHER;
                     case 1 -> THE_END;
@@ -561,30 +558,23 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
         }
 
         String formatPosition(Tag tag) {
-            if (tag instanceof ListTag listTag && listTag.size() == 3) {
+            if (tag instanceof ListTag<?> listTag && listTag.size() == 3) {
 
-                Tag x = listTag.get(0);
-                Tag y = listTag.get(1);
-                Tag z = listTag.get(2);
-
-                if (x instanceof DoubleTag && y instanceof DoubleTag && z instanceof DoubleTag) {
-                    return this == OVERWORLD
-                            ? String.format("(%.2f, %.2f, %.2f)", x.getValue(), y.getValue(), z.getValue())
-                            : String.format("%s (%.2f, %.2f, %.2f)", name, x.getValue(), y.getValue(), z.getValue());
+                if (listTag.getTag(0) instanceof DoubleTag x
+                        && listTag.getTag(1) instanceof DoubleTag y
+                        && listTag.getTag(2) instanceof DoubleTag z) {
+                    return formatPosition(x.get(), y.get(), z.get());
                 }
 
                 return null;
             }
 
             if (tag instanceof IntArrayTag intArrayTag) {
+                int x = intArrayTag.get(0);
+                int y = intArrayTag.get(1);
+                int z = intArrayTag.get(2);
 
-                int x = intArrayTag.getValue(0);
-                int y = intArrayTag.getValue(1);
-                int z = intArrayTag.getValue(2);
-
-                return this == OVERWORLD
-                        ? String.format("(%d, %d, %d)", x, y, z)
-                        : String.format("%s (%d, %d, %d)", name, x, y, z);
+                return formatPosition(x, y, z);
             }
 
             return null;
@@ -592,14 +582,14 @@ public final class WorldInfoPage extends SpinnerPane implements WorldManagePage.
 
         String formatPosition(int x, int y, int z) {
             return this == OVERWORLD
-                    ? String.format("(%d, %d, %d)", x, y, z)
-                    : String.format("%s (%d, %d, %d)", name, x, y, z);
+                    ? "(%d, %d, %d)".formatted(x, y, z)
+                    : "%s (%d, %d, %d)".formatted(name, x, y, z);
         }
 
         String formatPosition(double x, double y, double z) {
             return this == OVERWORLD
-                    ? String.format("(%.2f, %.2f, %.2f)", x, y, z)
-                    : String.format("%s (%.2f, %.2f, %.2f)", name, x, y, z);
+                    ? "(%.2f, %.2f, %.2f)".formatted(x, y, z)
+                    : "%s (%.2f, %.2f, %.2f)".formatted(name, x, y, z);
         }
     }
 
